  * debian/postgresql-common.postinst: Fix adduser invocation, set home
    directory to /var/lib/postgresql. Closes: #308589
  * Remove pg_default.1 and pg_exec.1, these programs do not exist.  Closes:
    #305724
  * debian/postgresql-common.links: Add a symlink postgresql-common(7) to
    pg_wrapper(1) to make finding the manpage a bit more obvious.

 -- Martin Pitt <mpitt@debian.org>  Fri, 13 May 2005 00:15:06 +0200

postgresql-common (7) experimental; urgency=low

  * Fix warning when calling pg_wrapper with an invalid cluster.
  * PgCommon.pm, user_cluster_map(): If only one cluster exists, return that
    if no match is found in the map files.
  * pg_ctlcluster: Start the postmaster under the locale that was used with
    initdb.
  * Updated documentation in architecture.html.

 -- Martin Pitt <mpitt@debian.org>  Wed, 20 Apr 2005 02:34:19 +0200

postgresql-common (6) experimental; urgency=low

  * pg_dropcluster: Check if postmaster and autovacuum log file paths are
    defined before unlinking them to avoid a warning. Closes: #303259
  * pg_ctlcluster: Documented the autovacuum stuff in the POD.
  * debian/init.d-functions: Add autovacuum commands.
  * debian/maintscripts-functions: (Re)start/stop autovacuum daemons on
    configuration/removal of p-contrib-*.
  * pg_ctlcluster, autovacuum_start(): Check for already running daemon before
    starting a new one.
  * pg_createcluster: Add an explicit "local all" entry for the database
    superuser to pg_hba.conf. Closes: #303274

 -- Martin Pitt <mpitt@debian.org>  Wed,  6 Apr 2005 20:59:28 +0200

postgresql-common (5) experimental; urgency=low

  * PgCommon.pm: Internalize get/set_conf_value, export get/set_cluster_port
    instead.
  * pg_ctlcluster: Integrated pg_autovacuum startup if -contrib is installed
    (based on some patches from Adam R. Skutt, thanks).
  * pg_createcluster: Create autovacuum_log symlink and log file.
  * pg_dropcluster: Remove autovacuum_log symlink and log file.